apps/navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4533
      targetPort: 4533
      protocol: TCP
  selector:
    app: navidrome
