apps/navidrome/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: navidrome-ingress-from-traefik-only
  namespace: default
  labels:
    app: navidrome
spec:
  podSelector:
    matchLabels:
      app: navidrome
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - podSelector:
            matchLabels:
              app: gatus
      ports:
        - protocol: TCP
          port: 4533
